# web4

./: .gitignore  .private-context.md  AGENTS.md  ARCHITECTURE.md  ARCHIVE_MANIFEST.md  ATTENTION_ECONOMICS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCUSSION_READY_TO_POST.md  ENTITY_TYPES.md  EXECUTIVE_SUMMARY.md  FEDERATION_CONSENSUS_ATP_INTEGRATION.md  FEDERATION_DEPLOYMENT_GUIDE.md  GOVERNANCE_MANIFESTO.md  IMPLEMENTATION_PHASES.md  INTERACTIVE_SESSION_ACTIVE.md  LCT_E2E_INTEGRATION_COMPLETE.md  LCT_IDENTITY_PHASE2_COMPLETE.md  LCT_IDENTITY_PHASE3_COMPLETE.md  LCT_IDENTITY_SYSTEM.md  LCT_UNIFIED_PERMISSION_STANDARD.md  LRC_GOVERNANCE.md  LUPS_MIGRATION_GUIDE.md  MACHINE_CONTEXT.md  MESSAGE_TO_GPT.md  MULTI_MACHINE_FEDERATION_DEPLOYMENT.md  MULTI_MACHINE_SAGE_FEDERATION_DESIGN.md  PATENTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_backup.md  SAGE_CONSCIOUSNESS_REAL_WORLD_VALIDATION.md  SAGE_LinkedIn_Article.md  SAGE_WHITEPAPER.md  SECURITY.md  SECURITY_CONTRIBUTING.md  SECURITY_ISSUE_READY_TO_CREATE.md  SESSION144_SUMMARY.md  (+68 more)
hub/: .gitignore  Cargo.toml  Dockerfile  README.md  chapter.toml.example  docker-compose.yml
hub/docs/: BACKEND-OPTIONS.md  CHAPTER-LAW.md  HESTIA-MODE.md  HUB-LAW.md  MAINTAINER.md  PAIRED-CHANNELS.md  PRD.md  QUICKSTART.md  ROLES.md  SPRINTS.md  STORAGE.md  TROUBLESHOOTING.md  V2-V3-ARCHITECTURE.md
hub/examples/: dynamodb_local_smoke.sh  first-chapter-docker.sh  first-chapter.sh  starter-law.yaml
hub/hub-daemon/: Cargo.toml
hub/hub-daemon/examples/: channel_client.rs  join_client.rs  mock_hestia.rs
hub/hub-daemon/src/: admin.rs  main.rs  mcp.rs  rate_limit.rs  rest.rs
hub/hub-lib/: Cargo.toml
hub/hub-lib/examples/: dynamodb_smoke.rs
hub/hub-lib/src/: chapter.rs  charter.rs  constellation.rs  dynamodb_store.rs  envelope.rs  events.rs  hub.rs  identity.rs  init.rs  law.rs  ledger.rs  lib.rs  pair_message.rs  proposal.rs  replay.rs  session.rs  signer.rs  state.rs  store.rs  unlock_gate.rs  vault_tree.rs
hub/hub-plugin/: Cargo.toml
hub/hub-plugin/src/: lib.rs  tests.rs
hub/membox/: README.md  ingest.py  sidecar.py  test_ingest.py
hub/scripts/: smoke-external.sh
web4-core/: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
web4-core/examples/: holder_proof.rs
web4-core/examples/cross_language_verify/: .gitignore  README.md  mint.py  verify.rs
web4-core/python/: Cargo.toml  README.md  pyproject.toml
web4-core/python/examples/: identity_bootstrap.py
web4-core/python/src/: lib.rs
web4-core/python/web4/trust/attestation/: __init__.py  envelope.py  verify.py
web4-core/python/web4/trust/attestation/anchors/: secure_enclave.py  software.py
web4-core/python/web4/trust/attestation/tests/: test_envelope.py  test_verify.py
web4-core/python/web4_core/: __init__.py
web4-core/python/web4_core/trust/attestation/: __init__.py
web4-core/python/web4_core/trust/attestation/anchors/: fido2.py  tpm2.py
web4-core/src/: act.rs  atp.rs  attestation.rs  coherence.rs  crypto.rs  delegation.rs  did.rs  error.rs  event.rs  lct.rs  ledger.rs  lib.rs  oid4vc.rs  pair_channel.rs  r6.rs  ratchet.rs  role.rs  role_extension.rs  sd_jwt_vc.rs  society.rs  t3.rs  time.rs  v3.rs
web4-core/src/ledger/: in_memory.rs  local.rs
web4-core/src/vault/: crypto.rs  document.rs  mod.rs
web4-policy/: Cargo.toml
web4-policy/src/: lib.rs
web4-standard/implementation/sdk/: .coverage  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  web4_sdk.py
web4-standard/implementation/sdk/.hardbound/: config.json  session-report-b7096f19-2077-475d-ad7e-cadfb3927ba6.txt  signing.key
web4-standard/implementation/sdk/examples/: README.md  ai_agent_workflow.py  multi_agent_coordination.py  quickstart.py
web4-standard/implementation/sdk/tests/: test_acp.py  test_acp_jsonld.py  test_atp.py  test_atp_jsonld.py  test_attestation.py  test_attestation_jsonld.py  test_binding.py  test_binding_attestation.py  test_capability.py  test_capability_jsonld.py  test_cli.py  test_conformance.py  test_conformance_atp.py  test_conformance_society.py  test_deserialize.py  test_dictionary.py  test_entity.py  test_entity_jsonld.py  test_errors.py  test_federation.py  test_generate.py  test_integration.py  test_jsonld_lifecycle.py  test_jsonld_schema_roundtrip.py  test_lct_jsonld.py  test_lct_jsonld_vectors.py  test_lct_roundtrip.py  test_mcp.py  test_mcp_cross_society.py  test_mcp_process_action.py  test_mcp_server.py  test_metabolic.py  test_mrh.py  test_package_api.py  test_process_action_outcome.py  test_protocol.py  test_r6.py  test_r6_roundtrip.py  test_reputation.py  test_role.py  (+10 more)
web4-standard/implementation/sdk/web4/: __init__.py  __main__.py  acp.py  atp.py  attestation.py  binding.py  capability.py  deserialize.py  dictionary.py  entity.py  errors.py  federation.py  generate.py  lct.py  mcp.py  mcp_server.py  metabolic.py  mrh.py  protocol.py  r6.py  reputation.py  role.py  schema_registry.json  security.py  society.py  trust.py  validation.py
web4-standard/implementation/sdk/web4/schemas/: __init__.py  acp-jsonld.schema.json  atp-jsonld.schema.json  attestation-envelope-jsonld.schema.json  capability-jsonld.schema.json  r7-action-jsonld.schema.json  t3v3-jsonld.schema.json  trust-query.schema.json
web4-trust-core/: Cargo.toml  README.md  ROLLOUT_PLAN.md  pyproject.toml
web4-trust-core/benches/: trust_benchmarks.rs
web4-trust-core/examples/: browser-test.html
web4-trust-core/pkg/: README.md  package.json  web4_trust_core.d.ts  web4_trust_core.js  web4_trust_core_bg.wasm  web4_trust_core_bg.wasm.d.ts
web4-trust-core/python/web4_trust/: __init__.py  __init__.pyi
web4-trust-core/src/: lib.rs
web4-trust-core/src/bindings/: mod.rs  python.rs  wasm.rs
web4-trust-core/src/decay/: mod.rs  temporal.rs
web4-trust-core/src/entity/: mod.rs  trust.rs  types.rs
web4-trust-core/src/storage/: file.rs  memory.rs  mod.rs  traits.rs
web4-trust-core/src/tensor/: mod.rs  t3.rs  v3.rs
web4-trust-core/src/witnessing/: chain.rs  event.rs  mod.rs
web4-trust-core/tests/: test_python_compat.py
(+2344 files in other folders)
