[package]
name = "hub-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AIC Hub — single-binary daemon (society + MCP server + admin CLI)"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
hub-lib = { path = "../hub-lib" }
web4-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
