[package]
name = "hub-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Web4 Community Hub — single-binary daemon (society + MCP server + admin CLI)"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
hub-lib = { path = "../hub-lib" }
web4-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.7"
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
hex = "0.4"
serde_yaml = "0.9"

[[example]]
name = "mock-hestia"
path = "examples/mock_hestia.rs"
