[package]
name = "hub-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Web4 Community Hub — single-binary daemon (society + MCP server + admin CLI)"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
zeroize = "1"
hub-lib = { path = "../hub-lib" }
web4-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.7"
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3"
hex = "0.4"
rpassword = "7"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[example]]
name = "mock-hestia"
path = "examples/mock_hestia.rs"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "channel_client"
path = "examples/channel_client.rs"
