[package]
name = "hub-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AIC Hub — society logic library (chapter state, ledger, roles, charter)"

[dependencies]
web4-core.workspace = true
web4-trust-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
