[package]
name = "hub-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Web4 Community Hub — society logic library (chapter state, ledger, roles, charter)"

[dependencies]
web4-core.workspace = true
web4-trust-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
hex = "0.4"
serde_yaml = "0.9"
semver = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
thiserror = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# V2-Sprint2: DynamoDB backend (opt-in via `dynamodb` feature).
# The AWS SDK is heavyweight; gating keeps the default build slim.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }
aws-sdk-dynamodb = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }

[features]
default = []
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.7"
