[package]
name = "hub-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic hub tool-plugin seam (core owns gate/scope/seal; plugins own handlers). The open-core keystone."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true }
