[package]
name = "web4-python"
version = "0.1.1"
edition = "2021"
authors = ["dp-web4 <dp@metalinxx.io>"]
description = "Python bindings for web4-core"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dp-web4/web4"

[lib]
name = "web4_core"
crate-type = ["cdylib"]

[dependencies]
web4-core = { path = ".." }
pyo3 = { version = "0.22", features = ["extension-module"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
pyo3-build-config = "0.22"
