[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "web4"
version = "0.1.0"
description = "Python bindings for Web4 trust-native infrastructure"
readme = "README.md"
authors = [
    { name = "dp-web4", email = "dp@metalinxx.io" }
]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
keywords = ["web4", "trust", "identity", "lct", "cryptography"]

[project.urls]
Homepage = "https://github.com/dp-web4/web4"
Repository = "https://github.com/dp-web4/web4"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "web4"
