[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "web4-core"
version = "0.2.0"
description = "Python bindings for Web4 trust-native infrastructure"
readme = "README.md"
authors = [
    { name = "dp-web4", email = "dp@metalinxx.io" }
]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
keywords = ["web4", "trust", "identity", "lct", "cryptography"]

[project.urls]
Homepage = "https://github.com/dp-web4/web4"
Repository = "https://github.com/dp-web4/web4"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "web4_core"
