[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web4"
version = "0.15.0"
description = "Web4 SDK — trust tensors, LCTs, ATP/ADP, federation (SAL), R7 actions, MRH, ACP, security, protocol types"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Web4 Infrastructure Team"}]
keywords = [
    "web4",
    "trust",
    "identity",
    "federation",
    "linked-context-token",
    "rdf",
    "semantic-web",
    "decentralized",
    "attestation",
    "agentic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dp-web4/web4"
Repository = "https://github.com/dp-web4/web4"
Issues = "https://github.com/dp-web4/web4/issues"
Changelog = "https://github.com/dp-web4/web4/blob/main/web4-standard/implementation/sdk/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "jsonschema>=4.0"]

[tool.setuptools.packages.find]
include = ["web4*"]

[tool.setuptools.package-data]
web4 = ["py.typed"]
